--- a/app/src/main/res/layout/activity_input_screen.xml
+++ b/app/src/main/res/layout/activity_input_screen.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.forfun.wdh.passwordapp.view.InputScreen"
+    tools:context="com.forfun.wdh.passwordapp.view.InputScreenActivity"
     android:weightSum="20"
     android:gravity="top">
 
