--- a/app/src/main/res/layout/activity_password_select.xml
+++ b/app/src/main/res/layout/activity_password_select.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:layout_marginRight="20dp"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +22,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:ems="10"
+        android:singleLine="true"
         android:id="@+id/passwordBox"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
@@ -54,15 +58,6 @@
             android:onClick="onClickChangePassword"
             android:layout_marginBottom="10dp" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Cancel"
-            android:id="@+id/button2"
-            android:background="@android:color/holo_blue_light"
-            android:layout_gravity="bottom|right"
-            android:onClick="onClickCancel"
-            android:layout_marginBottom="10dp" />
-        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
