--- a/app/src/main/res/layout/activity_change_characters.xml
+++ b/app/src/main/res/layout/activity_change_characters.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
@@ -12,23 +13,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/PasswordChange"
+        android:text="@string/CharacterChange"
         android:id="@+id/textView2"
         android:layout_gravity="left|top"
         android:textSize="22dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"  />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:ems="10"
-        android:maxLines="1"
-        android:id="@+id/passwordBox"
-        android:layout_below="@+id/textView2"
+        android:maxLines="3"
+        android:id="@+id/editTextCCA"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:maxLength="256" />
+
+    <Button
+        android:text="Reset To Default"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:onClick="onClickResetToDefault"
+        android:id="@+id/button3" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -55,7 +66,7 @@
             android:text="@string/Set"
             android:id="@+id/button"
             android:background="@android:color/holo_blue_light"
-            android:onClick="onClickChangePassword"
+            android:onClick="onClickChangeCharProfile"
             android:layout_marginBottom="10dp" />
 
     </LinearLayout>
