--- a/app/src/main/res/layout/activity_options_view.xml
+++ b/app/src/main/res/layout/activity_options_view.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/allow_persisting_data"
+            android:id="@+id/textView11"
+            android:layout_marginLeft="10dp"
+            android:textSize="28dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
+    </GridLayout>
 
     <GridLayout
         android:layout_width="match_parent"
@@ -16,7 +33,8 @@
             android:layout_marginLeft="10dp"
             android:textSize="28dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:onClick="onClickChangeCharactersButton" />
     </GridLayout>
 
     <GridLayout
@@ -32,7 +50,8 @@
             android:layout_marginLeft="10dp"
             android:textSize="28dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:onClick="onClickChangeRoundsButton"/>
     </GridLayout>
 
     <GridLayout
@@ -114,6 +133,14 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
     </GridLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
+
+    </LinearLayout>
 
 
 </LinearLayout>
