--- a/app/src/main/res/layout/activity_options_view.xml
+++ b/app/src/main/res/layout/activity_options_view.xml
@@ -7,7 +7,8 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:onClick="onPersistOptionsButton">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
