--- a/app/src/main/res/layout/activity_options_view.xml
+++ b/app/src/main/res/layout/activity_options_view.xml
@@ -24,7 +24,8 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:onClick="onClickChangeCharactersButton">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,14 +35,14 @@
             android:layout_marginLeft="10dp"
             android:textSize="28dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="onClickChangeCharactersButton" />
+            android:layout_marginBottom="10dp" />
     </GridLayout>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:onClick="onClickChangeRoundsButton">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,8 +52,7 @@
             android:layout_marginLeft="10dp"
             android:textSize="28dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="onClickChangeRoundsButton"/>
+            android:layout_marginBottom="10dp"/>
     </GridLayout>
 
     <GridLayout
@@ -106,23 +106,8 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/donate_text"
-            android:id="@+id/textView10"
-            android:layout_marginLeft="10dp"
-            android:textSize="28dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:onClick="onAboutButton">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
